[package]
name = "hashassine"
version = "0.1.0"
authors = ["Josh Münte <josh.muente@tutanota.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
md5 = "0.7.0"
sha1_smol = "1.0.0"
regex = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
